# show-me-cpp-code

./: .bazelrc  .gitignore  BUILD  README.md  build-cpu.sh  栈的压入、弹出序列.cpp
CMake/: README
CMake/05_use_a_lib/: CMakeLists.txt
CloudBrain/: 中文数字2阿拉伯数字.cpp
cpp-tutorial/30_3rdlibrary/: BUILD.bazel  WORKSPACE  WORKSPACE.bazel  repo.bzl  repositories.bzl
cpp-tutorial/30_3rdlibrary/abseil/: BUILD.bazel  abseil_repositories.bzl  hello_test.cc
cpp-tutorial/30_3rdlibrary/apr/: BUILD.bazel  apr.BUILD  repositories.bzl
cpp-tutorial/30_3rdlibrary/aprutil/: repositories.bzl
cpp-tutorial/30_3rdlibrary/bazel/: deps_imports.bzl  repositories.bzl  workspace.bzl
cpp-tutorial/30_3rdlibrary/bison/: bison.BUILD  repositories.bzl
cpp-tutorial/30_3rdlibrary/boost/: BUILD.bazel  boost.BUILD  boost_deps.bzl  boost_libraries.bzl  repositories.bzl
cpp-tutorial/30_3rdlibrary/bzip2/: repositories.bzl
cpp-tutorial/30_3rdlibrary/cares/: cares_repositories.bzl
cpp-tutorial/30_3rdlibrary/cityhash/: BUILD.bazel  BUILD.cityhash.bazel  cityhash_repositories.bzl
cpp-tutorial/30_3rdlibrary/config/: BUILD
cpp-tutorial/30_3rdlibrary/eigen/: BUILD.bazel  eigen.BUILD  eigen_repositories.bzl
cpp-tutorial/30_3rdlibrary/eigen/test/: BUILD  main.cc
cpp-tutorial/30_3rdlibrary/expat/: BUILD.bazel  repositories.bzl
cpp-tutorial/30_3rdlibrary/folly/: BUILD.bazel  folly.BUILD  repositories.bzl
cpp-tutorial/30_3rdlibrary/gflags/: BUILD.bazel  gflags_repositories.bzl
cpp-tutorial/30_3rdlibrary/glog/: BUILD.bazel  glog_repositories.bzl
cpp-tutorial/30_3rdlibrary/gtest/: BUILD.bazel  BUILD.gtest.bazel  gtest.BUILD  gtest_repositories.bzl
cpp-tutorial/30_3rdlibrary/iconv/: iconv_repositories.bzl
cpp-tutorial/30_3rdlibrary/include/: BUILD  BinaryTree.cpp  LinkedList.h  ListNode.h  TreeNode.h
cpp-tutorial/30_3rdlibrary/jemalloc/: jemalloc.BUILD  repositories.bzl
cpp-tutorial/30_3rdlibrary/json/: BUILD.bazel  json.BUILD  repositories.bzl
cpp-tutorial/30_3rdlibrary/leetcode_cc/: 143.reorder-list.cc  146.lru-cache.cc  5.longest-palindromic-substring.cc  BUILD  lcof22.链表中倒数第k个节点.cc  lcof24.reverse-linked-list.cc  lcof25.merge-two-sorted-lists.cc
cpp-tutorial/30_3rdlibrary/libevent/: BUILD.bazel  BUILD.libevent.bazel  libevent.BUILD  libevent_repositories.bzl
cpp-tutorial/30_3rdlibrary/libgit2/: libgit2_repositories.bzl
cpp-tutorial/30_3rdlibrary/libssh2/: libssh2_repositories.bzl
cpp-tutorial/30_3rdlibrary/liburing/: repositories.bzl
cpp-tutorial/30_3rdlibrary/llvm/: llvm.BUILD  llvm.bzl  llvm_repositories.bzl
cpp-tutorial/30_3rdlibrary/llvm_openmp/: libssh2_repositories.bzl  llvm_openmp.BUILD  openmp.bzl
cpp-tutorial/30_3rdlibrary/log4cxx/: BUILD.bazel  log4cxx.BUILD  repositories.bzl
cpp-tutorial/30_3rdlibrary/lz4/: repositories.bzl
cpp-tutorial/30_3rdlibrary/m4/: repositories.bzl
cpp-tutorial/30_3rdlibrary/msgpack/: BUILD.bazel  repositories.bzl
cpp-tutorial/30_3rdlibrary/myexamples/01_pretty-printed/: README.md
cpp-tutorial/30_3rdlibrary/myexamples/01_pretty-printed/main/: clang_format.bzl  hello-world.cc
cpp-tutorial/30_3rdlibrary/myexamples/16_tfrecord/: build.sh
cpp-tutorial/30_3rdlibrary/myexamples/16_tfrecord/lib/: BUILD
cpp-tutorial/30_3rdlibrary/myexamples/18_bazel_genrule/: BUILD
cpp-tutorial/30_3rdlibrary/myexamples/21_tensorflow/: .bazelrc  testtf.cc
cpp-tutorial/30_3rdlibrary/myexamples/bazel_sharedlib/: README
cpp-tutorial/30_3rdlibrary/myexamples/boost/: main.cc
cpp-tutorial/30_3rdlibrary/myexamples/brpc/: BUILD  client.cc  server.cc
cpp-tutorial/30_3rdlibrary/myexamples/compressor_example/: simple_compression.cc
cpp-tutorial/30_3rdlibrary/myexamples/cxxtimer/: BUILD  example.cpp  zlib-example.cpp
cpp-tutorial/30_3rdlibrary/myexamples/double-conversion/: cctest.h
cpp-tutorial/30_3rdlibrary/myexamples/eigen/: BUILD  main.cc  test1.cpp  test2.cpp
cpp-tutorial/30_3rdlibrary/myexamples/flatbuffers/: BUILD  sample_binary.cpp
cpp-tutorial/30_3rdlibrary/myexamples/grpc/: BUILD  greeter_client.cc  greeter_server.cc
cpp-tutorial/30_3rdlibrary/myexamples/json/: BUILD  hello-world.cc  test.json
cpp-tutorial/30_3rdlibrary/myexamples/proto_library/: WORKSPACE
cpp-tutorial/30_3rdlibrary/myexamples/protobuf/: BUILD  add_person.cc
cpp-tutorial/30_3rdlibrary/myexamples/pslite/: BUILD  lr_ps.cc  ps.cpp
cpp-tutorial/30_3rdlibrary/myexamples/rand_srand/: srand_test.cc
cpp-tutorial/30_3rdlibrary/myexamples/regex/: BUILD  main.cc  main1.cc
cpp-tutorial/30_3rdlibrary/myexamples/rocksdb/: BUILD  RocksDbTest.cpp  simple_example.cc
cpp-tutorial/30_3rdlibrary/myexamples/tcmcp/: BUILD
cpp-tutorial/30_3rdlibrary/myexamples/test/: BUILD  test_atomic.cc  test_condition_variable.cc
cpp-tutorial/30_3rdlibrary/myexamples/test_db/: BUILD  multi_processes_example.cc  test_rocketdb.cc
cpp-tutorial/30_3rdlibrary/myexamples/test_smart_pointers/: BUILD  shared_ptr.cc  unique_ptr.cc
cpp-tutorial/30_3rdlibrary/myexamples/test_template/: BUILD  main.cpp
cpp-tutorial/30_3rdlibrary/myexamples/thrift/: BUILD  a.thrift
cpp-tutorial/30_3rdlibrary/openblas/: BUILD.bazel  BUILD.openblas.bazel  openblas_repositories.bzl
cpp-tutorial/30_3rdlibrary/protobuf/: BUILD.bazel  repositories.bzl
cpp-tutorial/30_3rdlibrary/pslite/: repositories.bzl
cpp-tutorial/30_3rdlibrary/rapidcsv/: ex001.cpp  rapidcsv.BUILD  rapidcsv.h  repositories.bzl
cpp-tutorial/30_3rdlibrary/rapidjson/: rapidjson.BUILD  repositories.bzl
cpp-tutorial/30_3rdlibrary/rocksdb/: BUILD.bazel  README.md  repositories.bzl  rocksdb.BUILD
cpp-tutorial/30_3rdlibrary/snappy/: BUILD.bazel  repositories.bzl
cpp-tutorial/30_3rdlibrary/spdlog/: repositories.bzl  spdlog.BUILD
cpp-tutorial/30_3rdlibrary/thrift/: BUILD.bazel  repositories.bzl  thrift.BUILD
cpp-tutorial/30_3rdlibrary/zeromq/: BUILD.bazel  repositories.bzl  zeromq.BUILD  zeromq_repositories.bzl
cpp-tutorial/30_3rdlibrary/zlib/: BUILD.bazel  zlib_repositories.bzl
cpp-tutorial/30_3rdlibrary/zstd/: BUILD.bazel  repositories.bzl  zstd.BUILD
cpp-tutorial/30_openssl/: BUILD.bazel  WORKSPACE.bazel  repositories.bzl
(+1378 files in other folders)
