workspace(name = "rules_foreign_cc_examples_third_party")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_foreign_cc",
    strip_prefix = "rules_foreign_cc-master",
    urls = [
        "https://github.com.cnpmjs.org/bazelbuild/rules_foreign_cc/archive/master.zip",
        "https://github.com/bazelbuild/rules_foreign_cc/archive/master.zip",
    ]
)

load("@rules_foreign_cc//:workspace_definitions.bzl", "rules_foreign_cc_dependencies")

# rules_foreign_cc_dependencies(register_preinstalled_tools = False)
rules_foreign_cc_dependencies()


load("//:repositories.bzl", "repositories")

repositories()
