load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:defs.bzl", "cc_binary")

exports_files(
    [
        "BUILD.cityhash.bazel",
    ],
    visibility = ["//visibility:public"],
)

build_test(
    name = "cityhash_build_test",
    targets = [
        "@cityhash//:cityhash",
    ],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "test",
    srcs = [
        "cityhash-example.cc",
    ],
    copts = [
        "-std=gnu++17",
    ],
    linkopts = [
        "-lstdc++",
        # "-static",
    ],
    deps = [
        "@cityhash",
    ],
)
