load("@bazel_skylib//rules:build_test.bzl", "build_test")

exports_files(
    [
        "BUILD.libevent.bazel",
    ],
    visibility = ["//visibility:public"],
)

build_test(
    name = "libevent_build_test",
    targets = [
        "@libevent//:libevent",
    ],
    visibility = ["//:__pkg__"],
)
